# SAES

./: README
election/: AUTHORS  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in~  config.status  configure  configure.ac
election/autom4te.cache/: output.0  requests  traces.0  traces.1
election/conf/: Makefile  Makefile.in
election/debian/: README.Debian  changelog  control  election.bash-completion  election.lintian-overrides  rules
election/doc/: Makefile  Makefile.am  Makefile.in
election/etc/: Makefile  Makefile.am  Makefile.in  election.desktop  election.desktop.in  election.desktop.in.in
election/log/: Makefile  Makefile.am  Makefile.in
election/pixmaps/: Makefile  Makefile.am  Makefile.in
election/po/: Makefile  Makefile.in  POTFILES  POTFILES.in  POTFILES.skip  en.gmo  en.po  notexist
election/src/: Config.cxx  Config.hxx  Diagnostics.cxx  Diagnostics.hxx  Makefile  Makefile.am  Makefile.in  PMachine.cxx  PMachine.hxx  RunFunctionality.cxx  RunFunctionality.hxx  VMachine.cxx  VMachine.hxx  election  main.cc
saes/: ChangeLog  Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.ac  libtool
saes-os/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac
saes-os/autom4te.cache/: output.0  requests  traces.0  traces.1
saes-os/debian/: README.Debian  changelog  control  copyright  rules  saes-os-bcr.install  saes-os-storage.install  saes-os.install
saes-os/etc/: Makefile  Makefile.am  Makefile.in  saes-os.conf  saes-os.conf.in
saes-os/scripts/: Makefile  Makefile.am  Makefile.in  smtt-barcode-event  smtt-barcode-event.in  smtt-dsort  smtt-dsort.in  smtt-event-device  smtt-event-device.in  smtt-event-script  smtt-event-script.in  smtt-movefile  smtt-movefile.in  smtt-printblank  smtt-printblank.in  smtt-smartcard  smtt-smartcard.in
saes-os/udev/: 70-saes-os-bcr.rules  70-saes-os-bcr.rules.in  70-saes-os-storage.rules  70-saes-os-storage.rules.in  Makefile  Makefile.am  Makefile.in
saes/autom4te.cache/: output.2  traces.0  traces.1  traces.2
saes/debian/: README.Debian  changelog  control  libsaes-dev.install  libsaes-doc.install  libsaes-doc.links  libsaes1.install  libsaes1.shlibs
saes/docs/: Makefile  Makefile.in
saes/po/: Makefile  Makefile.in  POTFILES  POTFILES.in  en.gmo  en.po
saes/src/: Makefile  Makefile.am  Makefile.in  activated-card-statistics-list  assisted-activation-list  card-data-list  card-generated-list  close-election-notes-list  configuration-list  contingency-card-data-list  election-language-list  election-list  election-status-list  generated-images-list  id-card-info-list  id-card-members-list  incident-report-list  libsaes.la  libsaes.pc  libsaes.pc.in  libsaes_la-AuditLogPrintDocument.lo  libsaes_la-BarcodeConfigPrinting.lo  libsaes_la-BarcodePrinting.lo  libsaes_la-CardGeneratedListWrapper.lo  libsaes_la-CodiBuffer.lo  libsaes_la-CodiFile.lo  libsaes_la-CodiFileManager.lo  libsaes_la-CodiFileWrapper.lo  libsaes_la-CodiFormatUtillity.lo  libsaes_la-CodiInfo.lo  libsaes_la-CodiRegisterBase.lo  libsaes_la-CodiRegisterC.lo  libsaes_la-CodiRegisterL.lo  libsaes_la-CodiRegisterS.lo  libsaes_la-ContingencyCardDataWrapper.lo  libsaes_la-ContingencyCardReport.lo  libsaes_la-ElectionInstalationLanguages.lo  libsaes_la-ElectionStatusWrapper.lo  libsaes_la-ElectionWrapper.lo  libsaes_la-ElectoralConfiguration.lo  (+87 more)
saes/ui/: Makefile  Makefile.am  Makefile.in
saescommon/: Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.ac  libtool
saescommon/autom4te.cache/: output.2  traces.0  traces.1  traces.2
saescommon/debian/: changelog  control  libsaescommon-dev.install  libsaescommon-doc.install  libsaescommon-doc.links  libsaescommon1.install  libsaescommon1.lintian-overrides  libsaescommon1.shlibs
saescommon/docs/: Doxyfile.in  Makefile
saescommon/po/: Makefile  Makefile.in  POTFILES  POTFILES.in  en.gmo  en.po
saescommon/src/: Makefile  Makefile.am  Makefile.in  configuration-list  libsaescommon.la  libsaescommon.pc  libsaescommon.pc.in  libsaescommon_la-BasePrintDocument.lo  libsaescommon_la-CheckDirectoryStructure.lo  libsaescommon_la-CheckFilesPresence.lo  libsaescommon_la-CheckFlashPresence.lo  libsaescommon_la-CheckFlashStructure.lo  libsaescommon_la-CheckForMemoryComplete.lo  libsaescommon_la-CheckForUsedMemory.lo  libsaescommon_la-CitizenInfo.lo  libsaescommon_la-CryptoData.lo  libsaescommon_la-DirectPrintingBackend.lo  libsaescommon_la-DirectoryManager.lo  libsaescommon_la-DocumentOptions.lo  libsaescommon_la-EIDEvent.lo  libsaescommon_la-EIDManager.lo  libsaescommon_la-EIDPin.lo  libsaescommon_la-EIDRead.lo  libsaescommon_la-EIDSign.lo  libsaescommon_la-EIDUtils.lo  libsaescommon_la-Encryption.lo  libsaescommon_la-EnvironmentBuilder.lo  libsaescommon_la-GraphicContentPage.lo  libsaescommon_la-GraphicContextPrintingBackend.lo  libsaescommon_la-ICardController.lo  libsaescommon_la-ICheckCondition.lo  libsaescommon_la-IPrintingBackend.lo  libsaescommon_la-IStateWrapper.lo  (+38 more)
saesfunctionality/: Makefile  Makefile.am  Makefile.in  NEWS  README  config.h  config.h.in  config.status  configure  configure.ac  libtool
saesguibase/: Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool
saesl10n/: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.status  configure  configure.ac
saesthemes/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.status  configure  configure.ac  saes-themes.spec  saes-themes.spec.in
smartmatic/: Makefile  Makefile.am  Makefile.in  NEWS  README  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool
smartmaticgui/: Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.ac  libtool
smartmaticlog/: Makefile  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool
(+3088 files in other folders)
